# blackmagic

./: .gitmodules  CONTRIBUTING.md  Makefile  meson.build  meson_options.txt
.github/workflows/: build-pr.yml  build.yml
crossfile/: arm-none-eabi.ini
lib/: libopencm3.wrap
lib/packagefiles/libopencm3/: configure  meson.build
scripts/: run-clang-tidy.py
src/: Makefile  command.c  gdb_main.c  gdb_packet.c  interface.c  list.c  list.h  llist.c  meson.build  morse.c  remote.c  remote.h  rtt.c
src/include/: buffer_utils.h  gdb_packet.h  interface.h  jtagtap.h  llist.h  platform_support.h  rvswd.h  target.h
src/platform/: meson.build
src/platform/96b_carbon/: Makefile.inc
src/platform/blackpill-f4/: Makefile.inc
src/platform/blackpill-f401cc/: Makefile.inc  platform.h
src/platform/blackpill-f401ce/: Makefile.inc  platform.h
src/platform/blackpill-f411ce/: Makefile.inc  platform.h
src/platform/common/: meson.build  usb_descriptors.h
src/platform/common/blackpill-f4/: Makefile.inc  blackpill-f4.h
src/platform/f072/: Makefile.inc
src/platform/f3/: Makefile.inc
src/platform/f4discovery/: Makefile.inc
src/platform/hosted/: Makefile.inc  bmp_remote.h  cmsis_dap.h  dap_command.h  debug.h  ftdi_bmp.h  jlink.h  jlink_protocol.h  platform.h  stlinkv2.h  stlinkv2_protocol.h
src/platform/hosted/remote/: protocol_v0_adiv5.h  protocol_v0_defs.h  protocol_v0_jtag.h  protocol_v0_swd.h  protocol_v1.h  protocol_v2_defs.h  protocol_v3.h  protocol_v3_defs.h
src/platform/hydrabus/: Makefile.inc
src/platform/launchpad-icdi/: Makefile.inc
src/platform/native/: Makefile.inc  platform.h
src/platform/stlink/: Makefile.inc
src/platform/stlinkv3/: Makefile.inc
src/platform/stm32/: meson.build  traceswo.c  traceswoasync.c
src/platform/swlink/: Makefile.inc  platform_common.h
src/platform/tm4c/: meson.build
src/probe/: meson.build
src/probe/96b_carbon/: Makefile.inc  meson.build  platform.h
src/probe/blackpill-f4/: README.md  blackpill-f4.h  meson.build
src/probe/blackpill-f4/include/blackpill-f401ce/: platform.h
src/probe/blackpill-f401cc/: Makefile.inc  platform.h
src/probe/blackpill-f401ce/: Makefile.inc
src/probe/blackpill-f411ce/: Makefile.inc  platform.h
src/probe/bmda/: Makefile.inc
src/probe/f072/: Makefile.inc  meson.build  platform.h
src/probe/f3/: Makefile.inc  meson.build  platform.h
src/probe/f4discovery/: Makefile.inc  meson.build  platform.h
src/probe/hydrabus/: Makefile.inc  meson.build  platform.h
src/probe/launchpad-icdi/: Makefile.inc  meson.build  platform.h
src/probe/native/: Makefile.inc  meson.build  platform.h
src/probe/stlink/: Makefile.inc  meson.build  platform.h
src/probe/stlinkv3/: Makefile.inc  meson.build  platform.h
src/probe/swlink/: Makefile.inc  meson.build  platform.h  platform_common.h
