option('probe', type: 'combo', choices : ['96b_carbon', 'bluepill', 'f072', 'f3', 'f4discovery', 'hydrabus', 'launchpad-icdi', 'native', 'stlink', 'stlinkv3', 'swlink'], value: 'native', description: 'Probe host')
option('targets', type : 'array', choices : ['cortexa', 'cortexm', 'efm', 'lpc', 'nrf', 'nxp', 'renesas', 'rp', 'sam', 'stm', 'ti'], description: 'Enabled debug targets')
option('print_memory_usage', type: 'boolean', value: true, description: 'Print static memory usage')
option('debug_output', type: 'boolean', value: false, description: 'Enable debug output')
option('rtt_support', type: 'boolean', value: true, description: 'Enable RTT support')
option('rtt_ident', type: 'string', description: 'RTT identifier string')
option('no_own_ll', type: 'boolean', value: false, description: '???')
option('bmd_bootloader', type: 'boolean', value: true, description: 'Use the BMD bootloader (not always applicable)')
option('stlink_swim_as_uart', type: 'boolean', value: false, description: 'Repurpose the SWIM pins as the UART (only applicable to stlink)')
